# Brain-games

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter.yml  make_linter.yml
brain_games/: __init__.py  cli.py  game_logic.py  odd_game.py
brain_games/games/: calc.py  even.py  game_process.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
mistermikebell_brain_games.egg-info/: PKG-INFO  SOURCES.txt
