[tool.poetry]
name = "mistermikebell_brain_games"
version = "0.1.0"
description = ""
authors = ["liuxindao <jokerbell7@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
flake8 = "^3.8.3"
wemake-python-styleguide = "^0.14.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"



