[tool.poetry]
name = "mistermikebell_brain_games"
version = "0.6.0"
description = "Set of math games. Offers a user solve simple calculation tasks"
authors = ["Mikhail Voronin <jokerbell7@gmail.com>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
 "Development Status :: 3 - Alpha",
 "Framework :: Flake8",
 "Intended Audience :: Education",
 "License :: Free For Educational Use",
 "Natural Language :: English",
 "Programming Language :: Python :: 3.8"
]

[tool.poetry.urls]
repository = "https://github.com/mistermikebell/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"



